Refactor snow replacement to fix issues with not replacing decorative blocks.